--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "gulp": "^3.8.6",
-    "gulp-exec": "^2.0.1"
+    "gulp-exec": "^2.0.1",
+    "underscore": "^1.6.0"
   }
 }
